# polyrc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  build.rs  dist-workspace.toml  polyrc.toml  release.toml
.github/workflows/: attach-checksum.yml  prune-releases.yml  release.yml
docs/: formats.md
rules/_user/: antigravity.yml  build.yml  oss.yml  project.yml
src/: cli.rs  config.rs  convert.rs  discover.rs  error.rs  ir.rs  main.rs  parser.rs  self_update.rs  writer.rs
src/formats/: antigravity.rs  claude.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  windsurf.rs
src/store/: manifest.rs  merge.rs  mod.rs
src/sync/: mod.rs
xtask/src/: main.rs
