[package]
name = "polyrc"
version = "0.1.0"
edition = "2024"
description = "Convert AI coding agent configurations between tools (Cursor, Windsurf, Claude Code, Copilot, etc.)"
license = "MIT"
repository = "https://github.com/tjirsch/polyrc"
readme = "README.md"
keywords = ["ai", "cursor", "claude", "config", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "polyrc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0"
anyhow = "1"
thiserror = "2"
walkdir = "2"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
