[package]
name = "polyrc"
version = "0.1.9"
edition = "2024"
description = "Convert AI coding agent configurations between tools (Cursor, Windsurf, Claude Code, Copilot, etc.)"
license = "MIT"
repository = "https://github.com/tjirsch/polyrc"
readme = "README.md"
keywords = ["ai", "cursor", "claude", "config", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "polyrc"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
opt-level = "z"          # optimize for size (vs "s" which is slightly less aggressive)
lto = true               # full LTO — more effective than "thin" for size
codegen-units = 1        # single codegen unit enables better dead code elimination
strip = true             # strip symbols and debug info from the binary
panic = "abort"          # removes unwinding machinery (~50-100KB)


[workspace]
members = ["xtask"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_yml = "0"
anyhow = "1"
thiserror = "2"
walkdir = "2"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0.149"
